@@ -7,7 +7,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.denodo.connect</groupId>
     <artifactId>denodo-mongodb-customwrapper-5.5</artifactId>
-    <version>20140926</version>
+    <version>20151015</version>
     <packaging>jar</packaging>
     <name>denodo-mongodb-customwrapper-5.5</name>
 
